<?xml version="1.0"?>
<package format="3">
  <name>rosbot_keyboard</name>
  <version>0.0.1</version>
  <description>Keyboard teleoperation node for Roboworks ROSbot.</description>

  <maintainer email="info@dotxautomation.com">dotX Automation s.r.l</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
